--- a/package.json
+++ b/package.json
@@ -29,24 +29,25 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/components": "2.0.0-beta.14",
-    "@tarojs/components-qa": "2.0.0-beta.14",
-    "@tarojs/router": "2.0.0-beta.14",
-    "@tarojs/taro": "2.0.0-beta.14",
-    "@tarojs/taro-alipay": "2.0.0-beta.14",
-    "@tarojs/taro-h5": "2.0.0-beta.14",
-    "@tarojs/taro-qq": "2.0.0-beta.14",
-    "@tarojs/taro-quickapp": "2.0.0-beta.14",
-    "@tarojs/taro-rn": "2.0.0-beta.14",
-    "@tarojs/taro-swan": "2.0.0-beta.14",
-    "@tarojs/taro-tt": "2.0.0-beta.14",
-    "@tarojs/taro-weapp": "2.0.0-beta.14",
+    "@tarojs/components": "2.0.2",
+    "@tarojs/components-qa": "2.0.2",
+    "@tarojs/router": "2.0.2",
+    "@tarojs/taro": "2.0.2",
+    "@tarojs/taro-alipay": "2.0.2",
+    "@tarojs/taro-h5": "2.0.2",
+    "@tarojs/taro-qq": "2.0.2",
+    "@tarojs/taro-quickapp": "2.0.2",
+    "@tarojs/taro-rn": "2.0.2",
+    "@tarojs/taro-swan": "2.0.2",
+    "@tarojs/taro-tt": "2.0.2",
+    "@tarojs/taro-weapp": "2.0.2",
     "nerv-devtools": "^1.5.5",
-    "nervjs": "^1.5.5"
+    "nervjs": "^1.5.5",
+    "taro-ui": "^2.2.4"
   },
   "devDependencies": {
-    "@tarojs/mini-runner": "2.0.0-beta.14",
-    "@tarojs/webpack-runner": "2.0.0-beta.14",
+    "@tarojs/mini-runner": "2.0.2",
+    "@tarojs/webpack-runner": "2.0.2",
     "@types/react": "^16.4.6",
     "@types/webpack-env": "^1.13.6",
     "babel-eslint": "^8.2.3",
@@ -56,15 +57,15 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "eslint": "^5.16.0",
-    "eslint-config-taro": "2.0.0-beta.14",
+    "eslint-config-taro": "2.0.2",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-taro": "2.0.0-beta.14",
+    "eslint-plugin-taro": "2.0.2",
     "prettier": "^1.19.1",
     "stylelint": "^12.0.1",
-    "stylelint-config-taro-rn": "2.0.0-beta.14",
-    "stylelint-taro-rn": "2.0.0-beta.14"
+    "stylelint-config-taro-rn": "2.0.2",
+    "stylelint-taro-rn": "2.0.2"
   }
 }
