--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
     "format": "prettier --write \"./src/**/*.{js,jsx,json}\"",
-    "lint": "run-p eslint",
+    "lint": "run-p eslint stylelint",
     "eslint": "eslint --fix --ext .js,.jsx src",
-    "stylelint": "stylelint \"./src/**/*.{css,less,scss}\" --fix"
+    "stylelint": "stylelint \"./src/**/*.{css,less}\" --fix"
   },
   "husky": {
     "hooks": {
@@ -75,7 +75,10 @@
     "husky": "^4.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
+    "style-resources-loader": "^1.3.3",
     "stylelint": "^12.0.1",
+    "stylelint-config-recess-order": "^2.0.3",
+    "stylelint-config-standard": "^19.0.0",
     "stylelint-config-taro-rn": "2.0.2",
     "stylelint-taro-rn": "2.0.2"
   }
